--- a/rag/rag.ipynb
+++ b/rag/rag.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -qU python-dotenv langchain-upstage langchain-pinecone langchain-text-splitters langchain_core python-docx langchain-openai langchain-ollama langchain-huggingface\n",
+    "%pip install -qU python-dotenv langchain-upstage langchain-pinecone langchain-text-splitters langchain_core python-docx langchain-openai\n",
     "%pip install --upgrade --quiet  docx2txt langchain_community\n",
     "%pip install unstructured"
    ]
@@ -68,42 +68,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -U langchain-ollama"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='hello', response_metadata={'model': 'Llama-3-Open-Ko-8B-Q8_0', 'created_at': '2024-09-04T06:01:30.9923398Z', 'message': {'role': 'assistant', 'content': ''}, 'done_reason': 'stop', 'done': True, 'total_duration': 11496523200, 'load_duration': 6351412600, 'prompt_eval_count': 54, 'prompt_eval_duration': 4348779000, 'eval_count': 4, 'eval_duration': 791459000}, id='run-3f7794bf-3426-4451-be6f-fe4b27b584e3-0', usage_metadata={'input_tokens': 54, 'output_tokens': 4, 'total_tokens': 58})"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain_ollama import ChatOllama\n",
-    "\n",
-    "llm = ChatOllama(\n",
-    "    model = \"Llama-3-Open-Ko-8B-Q8_0\",\n",
-    "    temperature = 0.8,\n",
-    "    num_predict = 256,\n",
-    ")\n",
-    "llm.invoke(\"hi\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "from pinecone import Pinecone\n",
     "from langchain_pinecone import PineconeVectorStore\n",
@@ -113,30 +77,6 @@
     "index_name = 'vtw-2'\n",
     "\n",
     "database = PineconeVectorStore.from_documents(document_list, embedding, index_name=index_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "VectorStoreRetriever(tags=['PineconeVectorStore', 'OllamaEmbeddings'], vectorstore=<langchain_pinecone.vectorstores.PineconeVectorStore object at 0x00000210362CC9E0>)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain_ollama import OllamaEmbeddings\n",
-    "\n",
-    "embedding = OllamaEmbeddings(model=\"Llama-3-Open-Ko-8B-Q8_0\", base_url=None)\n",
-    "database = PineconeVectorStore.from_existing_index(index_name=\"vtw-2\", embedding=embedding)\n",
-    "database.as_retriever()"
    ]
   }
  ],
