--- a/rag/04.rag_pdf_with_openai.ipynb
+++ b/rag/04.rag_pdf_with_openai.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        " Document(metadata={'source': 'pdf\\\\회사생활가이드_경비기준_230501 (2).pdf'}, page_content='(3) 출장 숙소는 출장자 자율로 결정한다.\\n\\n(4) 해외 출장은 현지 경비 (임원 12만원, 임원외 8만원)을 별도로 지급. 현지 경비에는 식비, 현지 교통비가 포함됨\\n\\n© 2016 vtw, All Right Reserved')]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,20 +236,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv \n",
-    "from langchain_upstage import UpstageEmbeddings\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
     "\n",
-    "load_dotenv()\n",
-    "embedding = UpstageEmbeddings(model=\"solar-embedding-1-large\")"
+    "embedding = OpenAIEmbeddings(model=\"text-embedding-3-large\")\n",
+    "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +270,7 @@
     "\n",
     "pinecone_api_key = os.environ.get(\"PINECONE_API_KEY\")\n",
     "pc = Pinecone(api_key=pinecone_api_key)\n",
-    "index_name = 'vtw-pdf-upstage'\n",
+    "index_name = 'vtw-pdf-openai'\n",
     "\n",
     "database = PineconeVectorStore.from_documents(docs, embedding, index_name=index_name)"
    ]
