--- a/rag/04.rag_with_langgraph_core.ipynb
+++ b/rag/04.rag_with_langgraph_core.ipynb
@@ -15,19 +15,11 @@
     }
    ],
    "source": [
-    "from typing import Literal, Annotated, Sequence, TypedDict\n",
-    "from typing_extensions import Annotated, TypedDict\n",
+    "from typing import Literal\n",
     "from langchain_core.pydantic_v1 import BaseModel, Field\n",
-    "from langgraph.graph import START, END, StateGraph\n",
-    "from langgraph.prebuilt import ToolNode\n",
-    "from langchain_core.messages import BaseMessage, HumanMessage\n",
-    "from langgraph.graph.message import add_messages\n",
-    "from langchain.schema import SystemMessage\n",
-    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder, PromptTemplate\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
     "from dotenv import load_dotenv\n",
-    "from langchain.tools.retriever import create_retriever_tool\n",
     "from langchain_pinecone import PineconeVectorStore\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_openai import ChatOpenAI, OpenAIEmbeddings\n",
     "\n",
     "load_dotenv()\n",
