--- a/rag/03.rag_with_langgraph.ipynb
+++ b/rag/03.rag_with_langgraph.ipynb
@@ -137,6 +137,50 @@
     "output = app.invoke({\"messages\": input_messages}, config)\n",
     "output[\"messages\"][-1].pretty_print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Literal\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_pinecone import PineconeVectorStore\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "\n",
+    "load_dotenv()\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
+    "database = PineconeVectorStore.from_existing_index(\n",
+    "  index_name=\"vtw-pdf-openai\", \n",
+    "  embedding=OpenAIEmbeddings(model=\"text-embedding-3-large\"),\n",
+    ")\n",
+    "retriever = database.as_retriever()\n",
+    "\n",
+    "class RouteQuery(BaseModel):\n",
+    "    datasource: Literal[\"vectorstore\", \"own-generating\"] = Field(\n",
+    "        ...,\n",
+    "        description=\"Given a user question choose to route it to own-generating or a vectorstore.\",\n",
+    "    )\n",
+    "\n",
+    "structured_llm_router = llm.with_structured_output(RouteQuery)\n",
+    "\n",
+    "system = \"\"\"You are an expert at routing a user question to a vectorstore or not\n",
+    "The vectorstore contains documents related to IT company VTW.\n",
+    "If there are questions about 'VTW', '브띠따', '브이티더블유', Use the vectorstore for questions.\"\"\"\n",
+    "route_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", system),\n",
+    "        (\"human\", \"{question}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "test = route_prompt | structured_llm_router\n",
+    "\n",
+    "print(test.invoke(\"안녕하세요\"))\n",
+    "print(test.invoke(\"VTW는 어떤 회사입니까?\"))\n"
+   ]
   }
  ],
  "metadata": {
